# otus-cpp-pro-hw8

./: CMakeLists.txt  Doxyfile  README.md  annotated.html  classbayan_1_1ComparableFileContent-members.html  classbayan_1_1ComparableFileContent.html  classbayan_1_1DirectoryScanner-members.html  classbayan_1_1DirectoryScanner.html  classbayan_1_1DuplicateFilesSearcher-members.html  classbayan_1_1DuplicateFilesSearcher.html  classes.html  comparable__file__content_8h_source.html  dir_5a30104352ef4255dc24354b02eb2d20.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_a065c5f60305fee3569f887679366939.html  directory__scanner_8h_source.html  duplicate__files__searcher_8h_source.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  graph_legend.html  hash__algorithm_8h_source.html  hashing_8h_source.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherits.html  menudata.js  structbayan_1_1hashing_1_1CRC32-members.html  structbayan_1_1hashing_1_1CRC32.html  structbayan_1_1hashing_1_1CRC32__inherit__graph.map  (+9 more)
external_libs/: p_glob.h
lib/: CMakeLists.txt
lib/include/: comparable_file_content.h  directory_scanner.h  duplicate_files_searcher.h  hash_algorithm.h  hashing.h
lib/src/: comparable_file_content.cpp  directory_scanner.cpp  duplicate_files_searcher.cpp  hashing.cpp
search/: all_0.js  all_1.js  all_2.js  (+21 more)
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  bayan_lib_tests.cpp  config.h.in
tests/dir/dir3/: file3.2.txt
(+1 files in other folders)
